chore: fix unreadable color

--- a/m53c-synonym-app-react/frontend/src/components/SynonymList/SynonymList.module.scss
+++ b/m53c-synonym-app-react/frontend/src/components/SynonymList/SynonymList.module.scss
@@ -2,7 +2,7 @@
   h2 {
     text-align: center;
     .selectedWord {
-      color: darkslateblue;
+      color: deepskyblue;
     }
   }
   .synonymList {
